--- a/references.bib
+++ b/references.bib
@@ -340,3 +340,24 @@
 	year = {2017},
 	author = {Jean-Baptiste Meilhan and Sakie Suzuki},
 }
+
+@online{construction-of-lie-algebra-weight-system-kernel-via-vogel-algebra,
+	title = {Construction of Lie algebra weight system kernel via Vogel
+	         algebra},
+	author = {Dmitry Khudoteplov and Elena Lanina and Alexey Sleptsov},
+	year = {2025},
+	eprint = {2411.14417},
+	archivePrefix = {arXiv},
+}
+
+
+@article{the-universal-vassiliev-invariant-for-the-lie-superalgebra-gl1-1,
+	title = "The universal Vassiliev invariant for the Lie superalgebra \(
+	         \mathfrak{gl}(1|1)\)",
+	author = "Figueroa-O'Farrill, \{Jos{\'e} M.\} and Takashi Kimura and
+	          Arkady Vaintrob",
+	year = "1997",
+	volume = "185",
+	pages = "93--127",
+	number = "1",
+}
