--- a/setup.tex
+++ b/setup.tex
@@ -110,6 +110,9 @@
 \usepackage[framemethod=latex]{mdframed}
 \mdfsetup{backgroundcolor=Apricot, middlelinecolor=gray}
 
+\usepackage{framed}
+\colorlet{shadecolor}{Apricot}
+
 % Custom colour for citations
 \definecolor{CeruleanRef}{RGB}{12,127,172}
 
