--- a/references.bib
+++ b/references.bib
@@ -354,8 +354,8 @@
 @article{the-universal-vassiliev-invariant-for-the-lie-superalgebra-gl1-1,
 	title = "The universal Vassiliev invariant for the Lie superalgebra \(
 	         \mathfrak{gl}(1|1)\)",
-	author = "Figueroa-O'Farrill, \{Jos{\'e} M.\} and Takashi Kimura and
-	          Arkady Vaintrob",
+	author = "Figueroa-O'Farrill, José M. and Takashi Kimura and Arkady
+	          Vaintrob",
 	year = "1997",
 	volume = "185",
 	pages = "93--127",
